objects/Delivery_Note_Line_Item__c/Delivery_Note_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Delivery Note Line Item</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Line Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Delivery Note Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>