objects/Delivery_Note_Line_Item__c/fields/Delivery_Note__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Note__c</fullName>
    <label>Delivery Note</label>
    <referenceTo>Delivery_Note__c</referenceTo>
    <relationshipLabel>Delivery Note Line Items</relationshipLabel>
    <relationshipName>Delivery_Note_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>