objects/Delivery_Note_Line_Item__c/fields/Sales_Description__c.field-meta.xml
<CustomField>
    <fullName>Sales_Description__c</fullName>
    <label>Sales Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>