objects/Delivery_Note_Line_Item__c/fields/Sl_Number__c.field-meta.xml
<CustomField>
    <fullName>Sl_Number__c</fullName>
    <label>Sl Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>